# admerge

./: COPYRIGHT  Cargo.toml  README.md
src/: error.rs  lib.rs  merge.rs  util.rs
src/tests/: base.rs  pad.rs  skip.rs
tests/: filemerger.rs
