[package]
authors = ["Aaron Taner <mapkts@gmail.com>"]
description = "Merge multiply sources into one, with advanced options"
documentation = "https://docs.rs/admerge/"
edition = "2018"
include = [
  "src/**/*",
  "tests/**/*",
  "Cargo.toml",
  "README.md",
]
keywords = [
  "merge",
  "concat",
  "concatenate",
  "file",
  "util",
]
license = "MIT"
name = "admerge"
readme = "README.md"
repository = "https://github.com/mapkts/admerge/"
version = "0.1.1"

[dependencies]
byteseeker = "0.2"
thiserror = "1.0"
